[23530] Fix person query filter name or address